Cherry-pick r255058. rdar://problem/58830068
    Make sure fetch tasks go to network if service worker never gets to activated
    https://bugs.webkit.org/show_bug.cgi?id=206648

    Reviewed by Chris Dumez.

    Source/WebCore:

    In case worker context process crashes, the SWServerWorker gets set to NotRunning.
    If the SWServerWorker has pending activating completion handlers, they will never be called until the worker is destroyed.
    But the worker may never be destroyed until its registration is destroyed.
    This may trigger service worker fetch task hangs.

    To fix this, make sure to call activating completion handlers whenever the SWServerWorker state is changed to either Terminating or NotRunning.

    Covered by updated test.

    * workers/service/server/SWServerWorker.cpp:
    (WebCore::SWServerWorker::~SWServerWorker):
    (WebCore::SWServerWorker::whenActivated):
    (WebCore::SWServerWorker::setState):
    * workers/service/server/SWServerWorker.h:

    Source/WebKit:

    In case activating completion handlers are not called, the fetch task timeout should kick in and make the load go to network process.
    The issue is that our code was using the context connection to do so.
    If the fetch task is waiting for the worker activation, the context connection might not be set and the timeout will be a no-op.

    To fix this, the fetch task will do as if its context is closed when the timeout fires.
    The fetck task now has a weak pointer to the WebSWServerConnection and will use to terminate the service worker as done previously.

    We no longer handle all ongoing fetch tasks of the ongoing service worker.
    Each individual fetch task timeout provides the same level of protection.
    The service worker will anyway get terminated which will race to finalize the service worker fetch tasks with each of their timeout.

    * NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
    (WebKit::ServiceWorkerFetchTask::ServiceWorkerFetchTas

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,90 @@
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r255058. rdar://problem/58830068
+
+    Make sure fetch tasks go to network if service worker never gets to activated
+    https://bugs.webkit.org/show_bug.cgi?id=206648
+    
+    Reviewed by Chris Dumez.
+    
+    Source/WebCore:
+    
+    In case worker context process crashes, the SWServerWorker gets set to NotRunning.
+    If the SWServerWorker has pending activating completion handlers, they will never be called until the worker is destroyed.
+    But the worker may never be destroyed until its registration is destroyed.
+    This may trigger service worker fetch task hangs.
+    
+    To fix this, make sure to call activating completion handlers whenever the SWServerWorker state is changed to either Terminating or NotRunning.
+    
+    Covered by updated test.
+    
+    * workers/service/server/SWServerWorker.cpp:
+    (WebCore::SWServerWorker::~SWServerWorker):
+    (WebCore::SWServerWorker::whenActivated):
+    (WebCore::SWServerWorker::setState):
+    * workers/service/server/SWServerWorker.h:
+    
+    Source/WebKit:
+    
+    In case activating completion handlers are not called, the fetch task timeout should kick in and make the load go to network process.
+    The issue is that our code was using the context connection to do so.
+    If the fetch task is waiting for the worker activation, the context connection might not be set and the timeout will be a no-op.
+    
+    To fix this, the fetch task will do as if its context is closed when the timeout fires.
+    The fetck task now has a weak pointer to the WebSWServerConnection and will use to terminate the service worker as done previously.
+    
+    We no longer handle all ongoing fetch tasks of the ongoing service worker.
+    Each individual fetch task timeout provides the same level of protection.
+    The service worker will anyway get terminated which will race to finalize the service worker fetch tasks with each of their timeout.
+    
+    * NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
+    (WebKit::ServiceWorkerFetchTask::ServiceWorkerFetchTask):
+    (WebKit::ServiceWorkerFetchTask::timeoutTimerFired):
+    * NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.h:
+    * NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
+    (WebKit::WebSWServerConnection::createFetchTask):
+    (WebKit::WebSWServerConnection::fetchTaskTimedOut):
+    * NetworkProcess/ServiceWorker/WebSWServerConnection.h:
+    * NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
+    (WebKit::WebSWServerToContextConnection::fetchTaskTimedOut):
+    
+    LayoutTests:
+    
+    * http/wpt/service-workers/service-worker-spinning-activate.https-expected.txt:
+    * http/wpt/service-workers/service-worker-spinning-activate.https.html:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255058 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-24  youenn fablet  <youenn@apple.com>
+
+            Make sure fetch tasks go to network if service worker never gets to activated
+            https://bugs.webkit.org/show_bug.cgi?id=206648
+
+            Reviewed by Chris Dumez.
+
+            In case activating completion handlers are not called, the fetch task timeout should kick in and make the load go to network process.
+            The issue is that our code was using the context connection to do so.
+            If the fetch task is waiting for the worker activation, the context connection might not be set and the timeout will be a no-op.
+
+            To fix this, the fetch task will do as if its context is closed when the timeout fires.
+            The fetck task now has a weak pointer to the WebSWServerConnection and will use to terminate the service worker as done previously.
+
+            We no longer handle all ongoing fetch tasks of the ongoing service worker.
+            Each individual fetch task timeout provides the same level of protection.
+            The service worker will anyway get terminated which will race to finalize the service worker fetch tasks with each of their timeout.
+
+            * NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
+            (WebKit::ServiceWorkerFetchTask::ServiceWorkerFetchTask):
+            (WebKit::ServiceWorkerFetchTask::timeoutTimerFired):
+            * NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.h:
+            * NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
+            (WebKit::WebSWServerConnection::createFetchTask):
+            (WebKit::WebSWServerConnection::fetchTaskTimedOut):
+            * NetworkProcess/ServiceWorker/WebSWServerConnection.h:
+            * NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
+            (WebKit::WebSWServerToContextConnection::fetchTaskTimedOut):
+
 2020-01-29  Russell Epstein  <repstein@apple.com>
 
         Cherry-pick r254993. rdar://problem/58778970
