--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,117 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255226. rdar://problem/58780584
+
+    REGRESSION (r253634): cricbuzz.com media controls vanish depending on page scale
+    https://bugs.webkit.org/show_bug.cgi?id=206788
+    rdar://problem/58780584
+    
+    Reviewed by Tim Horton.
+    Source/WebCore:
+    
+    r253634 changed "delegatesPageScaling"'" to a flag on ScrollView. However, this changed behavior
+    for subframes; Settings are propagated down, but only the main ScrollView had delegatesPageScaling
+    set on it.
+    
+    "delegatesPageScaling" is a page-level thing (subframes don't independently zoom), so it
+    should live on Page. Move it there.
+    
+    The bug was triggered by incorrectly taking page scale into account for rects in the compositing
+    overlap map (see RenderLayerCompositor::addToOverlapMap()) in subframes, and those rects
+    changing on zoom.
+    
+    Test: compositing/backing/page-scale-overlap-in-iframe.html
+    
+    * page/Frame.cpp:
+    (WebCore::Frame::frameScaleFactor const):
+    * page/FrameSnapshotting.cpp:
+    (WebCore::snapshotFrameRectWithClip):
+    * page/FrameView.cpp:
+    (WebCore::FrameView::visibleContentScaleFactor const):
+    * page/Page.cpp:
+    (WebCore::Page::setPageScaleFactor):
+    (WebCore::Page::setDelegatesScaling):
+    * page/Page.h:
+    (WebCore::Page::delegatesScaling const):
+    * platform/ScrollView.cpp:
+    (WebCore::ScrollView::setDelegatesPageScaling): Deleted.
+    * platform/ScrollView.h:
+    (WebCore::ScrollView::delegatesPageScaling const): Deleted.
+    * rendering/RenderLayerCompositor.cpp:
+    (WebCore::RenderLayerCompositor::addToOverlapMap const):
+    
+    Source/WebKit:
+    
+    r253634 changed "delegatesPageScaling"'" to a flag on ScrollView. However, this changed behavior
+    for subframes; Settings are propagated down, but only the main ScrollView had delegatesPageScaling
+    set on it.
+    
+    "delegatesPageScaling" is a page-level thing (subframes don't independently zoom), so it
+    should live on Page. Move it there.
+    
+    The bug was triggered by incorrectly taking page scale into account for rects in the compositing
+    overlap map (see RenderLayerCompositor::addToOverlapMap()) in subframes, and those rects
+    changing on zoom.
+    
+    * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
+    (WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage):
+    * WebProcess/WebPage/ios/FindControllerIOS.mm:
+    (WebKit::FindIndicatorOverlayClientIOS::drawRect):
+    
+    Source/WebKitLegacy/mac:
+    
+    r253634 changed "delegatesPageScaling"'" to a flag on ScrollView. However, this changed behavior
+    for subframes; Settings are propagated down, but only the main ScrollView had delegatesPageScaling
+    set on it.
+    
+    "delegatesPageScaling" is a page-level thing (subframes don't independently zoom), so it
+    should live on Page. Move it there.
+    
+    The bug was triggered by incorrectly taking page scale into account for rects in the compositing
+    overlap map (see RenderLayerCompositor::addToOverlapMap()) in subframes, and those rects
+    changing on zoom.
+    
+    * WebCoreSupport/WebFrameLoaderClient.mm:
+    (WebFrameLoaderClient::transitionToCommittedForNewPage):
+    
+    LayoutTests:
+    
+    Test only really makes sense on iOS where the viewport tag is respected, but include
+    macOS results instead of skipping.
+    
+    * compositing/backing/page-scale-overlap-in-iframe-expected.txt: Added.
+    * compositing/backing/page-scale-overlap-in-iframe.html: Added.
+    * platform/ios-wk2/compositing/backing/page-scale-overlap-in-iframe-expected.txt: Added.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255226 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-27  Simon Fraser  <simon.fraser@apple.com>
+
+            REGRESSION (r253634): cricbuzz.com media controls vanish depending on page scale
+            https://bugs.webkit.org/show_bug.cgi?id=206788
+            rdar://problem/58780584
+
+            Reviewed by Tim Horton.
+
+            r253634 changed "delegatesPageScaling"'" to a flag on ScrollView. However, this changed behavior
+            for subframes; Settings are propagated down, but only the main ScrollView had delegatesPageScaling
+            set on it.
+
+            "delegatesPageScaling" is a page-level thing (subframes don't independently zoom), so it
+            should live on Page. Move it there.
+
+            The bug was triggered by incorrectly taking page scale into account for rects in the compositing
+            overlap map (see RenderLayerCompositor::addToOverlapMap()) in subframes, and those rects
+            changing on zoom.
+
+            * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
+            (WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage):
+            * WebProcess/WebPage/ios/FindControllerIOS.mm:
+            (WebKit::FindIndicatorOverlayClientIOS::drawRect):
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255058. rdar://problem/58830068
 
     Make sure fetch tasks go to network if service worker never gets to activated
