--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,43 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255366. rdar://problem/58440111
+
+    [iOS] Add managed preference to allow legacy sync XHRs during page dismissal
+    https://bugs.webkit.org/show_bug.cgi?id=206944
+    <rdar://problem/58440111>
+    
+    Reviewed by Alex Christensen.
+    
+    Add managed preference for iOS to allow enterprise customers to keep using legacy sync XHRs
+    during page dismissal.
+    
+    * Shared/WebPreferencesDefaultValues.cpp:
+    (WebKit::defaultDisallowSyncXHRDuringPageDismissalEnabled):
+    * Shared/WebPreferencesDefaultValues.h:
+    * Shared/ios/WebPreferencesDefaultValuesIOS.mm:
+    (WebKit::allowsDeprecatedSynchronousXMLHttpRequestDuringUnload):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255366 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-29  Chris Dumez  <cdumez@apple.com>
+
+            [iOS] Add managed preference to allow legacy sync XHRs during page dismissal
+            https://bugs.webkit.org/show_bug.cgi?id=206944
+            <rdar://problem/58440111>
+
+            Reviewed by Alex Christensen.
+
+            Add managed preference for iOS to allow enterprise customers to keep using legacy sync XHRs
+            during page dismissal.
+
+            * Shared/WebPreferencesDefaultValues.cpp:
+            (WebKit::defaultDisallowSyncXHRDuringPageDismissalEnabled):
+            * Shared/WebPreferencesDefaultValues.h:
+            * Shared/ios/WebPreferencesDefaultValuesIOS.mm:
+            (WebKit::allowsDeprecatedSynchronousXMLHttpRequestDuringUnload):
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255226. rdar://problem/58780584
 
     REGRESSION (r253634): cricbuzz.com media controls vanish depending on page scale
