--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,35 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255428. rdar://problem/58900030
+
+    [iOS] Remove report rule for 'com.apple.runningboard' from the Network and GPU process sandboxes
+    https://bugs.webkit.org/show_bug.cgi?id=206980
+    <rdar://problem/58900030>
+    
+    Reviewed by Maciej Stachowiak.
+    
+    Remove the logging now that we have useful backtraces.
+    
+    * Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb:
+    * Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255428 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-30  Brent Fulgham  <bfulgham@apple.com>
+
+            [iOS] Remove report rule for 'com.apple.runningboard' from the Network and GPU process sandboxes
+            https://bugs.webkit.org/show_bug.cgi?id=206980
+            <rdar://problem/58900030>
+
+            Reviewed by Maciej Stachowiak.
+
+            Remove the logging now that we have useful backtraces.
+
+            * Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb:
+            * Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb:
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255385. rdar://problem/58954516
 
     [iPadOS] Select popovers on amazon.com sometimes dismiss immediately after appearing
