--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,52 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255458. rdar://problem/59016256
+
+    Can still get stuck after swipe backwards with a slow server, even after r254552
+    https://bugs.webkit.org/show_bug.cgi?id=207017
+    <rdar://problem/59016256>
+    
+    Reviewed by Chris Dumez.
+    
+    * UIProcess/ProvisionalPageProxy.cpp:
+    (WebKit::ProvisionalPageProxy::unfreezeLayerTreeDueToSwipeAnimation):
+    * UIProcess/ProvisionalPageProxy.h:
+    * UIProcess/WebPageProxy.cpp:
+    There's a second case where you can get stuck with the "swipe gesture"
+    layer tree freeze reason in the web process: when doing a cross-origin
+    navigation where the load takes more than 3 seconds (the swipe
+    snapshot timeout) to commit, the provisional page will have mirrored
+    the original page's frozen state upon creation, but will not ever
+    receive the unfreeze, because it is sent while still provisional.
+    
+    To fix this, just forward the unfreeze message to the provisional page.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255458 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-30  Tim Horton  <timothy_horton@apple.com>
+
+            Can still get stuck after swipe backwards with a slow server, even after r254552
+            https://bugs.webkit.org/show_bug.cgi?id=207017
+            <rdar://problem/59016256>
+
+            Reviewed by Chris Dumez.
+
+            * UIProcess/ProvisionalPageProxy.cpp:
+            (WebKit::ProvisionalPageProxy::unfreezeLayerTreeDueToSwipeAnimation):
+            * UIProcess/ProvisionalPageProxy.h:
+            * UIProcess/WebPageProxy.cpp:
+            There's a second case where you can get stuck with the "swipe gesture"
+            layer tree freeze reason in the web process: when doing a cross-origin
+            navigation where the load takes more than 3 seconds (the swipe
+            snapshot timeout) to commit, the provisional page will have mirrored
+            the original page's frozen state upon creation, but will not ever
+            receive the unfreeze, because it is sent while still provisional.
+
+            To fix this, just forward the unfreeze message to the provisional page.
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255456. rdar://problem/58966044
 
     REGRESSION (r253267): Swipe from edge on Twitter images no longer goes back
