--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,38 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254950. rdar://problem/58544942
+
+    REGRESSION (r253519): [WKWebView evaluateJavaScript:completionHandler:] gives a non-nil, non-Error result even when JavaScript cannot be evaluated
+    <rdar://problem/58544942> and https://bugs.webkit.org/show_bug.cgi?id=206608
+    
+    Reviewed by Alex Christensen.
+    
+    Source/WebCore:
+    
+    Covered by new API test.
+    
+    * bindings/js/ScriptController.cpp:
+    (WebCore::ScriptController::executeScriptInWorld): Address a FIXME added in 253519 which had predicted this problem.
+    
+    Tools:
+    
+    * TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:
+    (TEST):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254950 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-22  Brady Eidson  <beidson@apple.com>
+
+            REGRESSION (r253519): [WKWebView evaluateJavaScript:completionHandler:] gives a non-nil, non-Error result even when JavaScript cannot be evaluated
+            <rdar://problem/58544942> and https://bugs.webkit.org/show_bug.cgi?id=206608
+
+            Reviewed by Alex Christensen.
+
+            * TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:
+            (TEST):
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255532. rdar://problem/57876140
 
     Add support for specifying background colors when setting marked text
