--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,29 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255247. rdar://problem/58838711
+
+    REGRESSION?: [ Mac wk1 ] storage/indexeddb/modern/blob-cursor.html is flaky timing out
+    https://bugs.webkit.org/show_bug.cgi?id=206673
+    
+    Unreviewed test gardening.
+    
+    Patch by Jacob Uphoff <jacob_uphoff@apple.com> on 2020-01-28
+    
+    * platform/mac-wk1/TestExpectations:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255247 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-28  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+            REGRESSION?: [ Mac wk1 ] storage/indexeddb/modern/blob-cursor.html is flaky timing out
+            https://bugs.webkit.org/show_bug.cgi?id=206673
+
+            Unreviewed test gardening.
+
+            * platform/mac-wk1/TestExpectations:
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255532. rdar://problem/57876140
 
     Add support for specifying background colors when setting marked text
